--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,39 +1,64 @@
-#--References-------------------------------------------------------------------
+#--References----------------------------------------------------------------------------
 # <a href="http://blog.hawkhost.com/2010/07/02/tmux-%E2%80%93-the-terminal-multiplexer-part-2/" title="http://blog.hawkhost.com/2010/07/02/tmux-%E2%80%93-the-terminal-multiplexer-part-2/">http://blog.hawkhost.com/2010/07/02/tmux-%E2%80%93-the-terminal-multiple...</a>
 # <a href="https://wiki.archlinux.org/index.php/Tmux" title="https://wiki.archlinux.org/index.php/Tmux">https://wiki.archlinux.org/index.php/Tmux</a>
-# 
+#
+# split panes using | and -
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
+
+# reload config file (change file location to your the tmux.conf you want to use)
+bind r source-file ~/.tmux.conf
+
+# switch panes using Alt-arrow without prefix
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+# Enable mouse control (clickable windows, panes, resizable panes)
+set -g mouse on
+
+# don't rename windows automatically
+set-option -g allow-rename off
+
 #--Status-Bar-------------------------------------------------------------------
 # Default colors
 set -g status-bg black
 set -g status-fg white
-# 
+
+#
 # Left side of status bar
 set -g status-left-length 20
 set -g status-left '#[fg=green][#[bg=black,fg=cyan]#S#[bg=black,fg=blue,dim]:#H#[fg=green]]'
-# 
+
+#
 # Inactive windows in status bar
 set-window-option -g window-status-format '#[fg=cyan,dim]#I#[fg=blue]:#[default]#W#[fg=grey,dim]#F'
-# 
+
+#
 # Current or active window in status bar
 #set-window-option -g window-status-current-bg yellow
 #set-window-option -g window-status-current-fg black
 set-window-option -g window-status-current-format '#[bg=blue,fg=cyan,bold]#I#[bg=blue,fg=cyan]:#[fg=white]#W#[fg=dim]#F'
-# 
+
+#
 # Alerted window in status bar. Windows which have an alert (bell, activity or content).
 # set-window-option -g window-status-alert-fg red
 # set-window-option -g window-status-alert-bg white
-# 
+#
 # Right side of status bar
 #set -g status-right '#[fg=yellow]#(date)'
 set -g status-right '#[fg=green][#[fg=white]#T#[fg=green]][#[fg=blue]%Y-%m-%d #[fg=white]%H:%M#[default]#[fg=green]]'
-# 
+#
+
 #--Usability--------------------------------------------------------------------
-set-option -g status-keys vi
-set-window-option -g mode-keys vi
+# set-option -g status-keys vi
+# set-window-option -g mode-keys vi
 # keep tmux msgs around longer
 set -g display-time 3000
 # set -g set-titles off
 # Set window notifications
 # set-window-option -g monitor-activity on
-# set -g visual-activity on
-# setw -g automatic-rename off
+# set -g visual-activity on 
